--- a/src/app/front-page/front-page.component.html
+++ b/src/app/front-page/front-page.component.html
@@ -69,8 +69,8 @@
             <mat-icon>arrow_right_alt</mat-icon>
           </a>
         </div>
-        <div class="col-12 col-md-4">
-          <img src="../../assets/images/Group 6850.png" alt="" />
+        <div class="col-12 col-md-4 mx-5">
+          <img src="../../assets/images/Group 6850.png" alt="" class="mx-5" />
         </div>
         <div class="col-2"></div>
       </div>
@@ -90,10 +90,17 @@
         </div>
         <div class="col-1"></div>
       </div>
+      <div class="row">
+        <div class="col-12">
+          <app-image-slider></app-image-slider>
+        </div>
+      </div>
       <div class="row mt-5">
         <div class="col-12">
+          
           <app-footer></app-footer>
         </div>
+       
       </div>
     </div>
   </div>
