--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,3 +30,5 @@ body { margin: 0; font-family: 'Manrope', sans-serif!important;font-size: 62.5%!
     line-height: 21.78px;
 }
 
+
+/* Importing Bootstrap SCSS file. */
