--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,21 +4,21 @@
     <p class="text-p">
       Please do get in touch with us. We will be pleased to provide advice and
       further information on any aspect of this service. <br />
-      Email your query to info@easy-cert.com
+      Email your query to <span><a href="">info@easy-cert.com</a></span>
     </p>
   </div>
 </div>
 <div class="row footer">
   <div class="col-2"></div>
   <div class="col-2 mt-2">
-    <img src="../../assets/images/Group 3843.png" alt="" />
+    <img src="../../assets/images/Group 3843.png" alt="" class="mx-4" />
     <div class="row">
       <ul>
         <li>
-          <p>© EASY-CERT group AG 2021</p>
+          <p class="mt-2 text-info">© EASY-CERT group AG 2021</p>
         </li>
         <li>
-          <p>In co-operation with:</p>
+          <p class="text-info">In co-operation with:</p>
         </li>
         <li>
           <img src="../../assets/images/image 84.png" alt="" />
@@ -27,7 +27,7 @@
     </div>
   </div>
   <div class="col-2 mt-2">
-    <ul>
+    <ul class="text-info text-sl">
       <li>
         <p class="text-p">Explore</p>
       </li>
@@ -37,7 +37,7 @@
     </ul>
   </div>
   <div class="col-2 mt-2">
-    <ul>
+    <ul class="text-info text-sl">
       <li>
         <p class="text-p">Other links</p>
       </li>
@@ -50,24 +50,24 @@
       </li>
     </ul>
   </div>
-  <div class="col-2 mt-2">
-    <ul>
+  <div class="col-2 mt-2 text-sl ">
+    <ul class="text-info text-sl">
       <li><p class="text-p">Contact</p></li>
       <li>
-        <p>EASY-CERT services AG CH-5070 Frick</p>
+        <p >EASY-CERT services AG CH-5070 Frick</p>
       </li>
       <li>
-        <p>Email: info@easy-cert.com</p>
+        <p>Email: <span><a href="">info@easy-cert.com</a></span> </p>
       </li>
       <li>
-        <p>Phone : +41 (0)62 865 63 00</p>
+        <p>Phone : <span><a href="">+43 (0) 3182 40 101-21</a></span></p>
       </li>
       <li><p>AT-2202 Enzersfeld bei Wien</p></li>
       <li>
-        <p>Email: info@easy-cert.at</p>
+        <p>Email: <span><a href="">info@easy-cert.com</a></span> </p>
       </li>
       <li>
-        <p>Phone : +43 (0) 3182 40 101-21</p>
+        <p>Phone : <span><a href="">+43 (0) 3182 40 101-21</a></span></p>
       </li>
     </ul>
   </div>
