--- a/src/app/front-page/front-page.component.html
+++ b/src/app/front-page/front-page.component.html
@@ -3,12 +3,18 @@
     <div class="col-12">
       <app-header></app-header>
       <div class="row">
+       <div class="col-1">
+
+       </div>
+       <div class="col-10 ">
         <div class="image mx-5">
           <img src="../../assets/images/Dark one.png" alt="" />
           <h3 class="txt">
             Check certifications, label approvals and products online
           </h3>
         </div>
+       </div>
+       <div class="col-1"></div>
       </div>
       <div class="row mt-5">
         <div class="col-2"></div>
@@ -16,21 +22,28 @@
           <img src="../../assets/images/7.png" alt="" />
         </div>
         <div class="col-md-4 col-12 mt-1">
-          <p class="text-xxxl">
+          <p class="text-xxxl text-info">
             With <span class="text-primary">EASY-CERT</span> you can make sure
             that the products you purchase have the label status you desire.
           </p>
           <ul>
-            <li>
-              <mat-icon>check_circle_outline </mat-icon>
-              <p>
+            <li class="text-primary">
+              <div class="d-flex flex-direction-column ">
+                <mat-icon>done</mat-icon>
+              <p class="text-p">
                 Swift and secure acess to infromation on certifications and
                 status
               </p>
-              <mat-icon>check_circle_outline </mat-icon>
-              <p>Gain transperancy and clarity to informations</p>
-              <mat-icon>check_circle_outline </mat-icon>
-              <p>Save your much valuable time</p>
+              </div>
+              <div class="d-flex flex-direction-column">
+                <mat-icon>done </mat-icon>
+                <p class="text-p">Gain transperancy and clarity to informations</p>
+              </div>
+              
+              <div class="d-flex flex-direction-column">
+                <mat-icon>done </mat-icon>
+              <p class="text-p">Save your much valuable time</p>
+              </div>
             </li>
           </ul>
           <button class="btn btn-primary mx-5 btn-lg">
@@ -43,11 +56,11 @@
       <div class="row mt-5 m">
         <div class="col-2"></div>
         <div class="col-12 col-md-4">
-          <p>About us</p>
-          <p class="text-xxl">
+          <p class="text-p">About us</p>
+          <p class="text-xxl text-info">
             With vision and courage, we are breaking new ground.
           </p>
-          <p>
+          <p class="text-xl text-info">
             The EASY-CERT partners publish certification information and label
             approvals of their customers and licence holders in a central
             information portal on the Internet. This joint initiative and the
@@ -55,12 +68,12 @@
           </p>
           <div class="row">
             <div class="col-auto">
-              <h3>550+</h3>
-              Employees
+              <h3 class="text-xxxl text-info">550+</h3>
+              <p class="text-xl">Employees</p>
             </div>
             <div class="col-auto">
-              <h3>40000+</h3>
-              Audits per year
+              <h3 class="text-xxxl text-info">40000+</h3>
+              <p class="text-xl">Audits per year</p>
             </div>
           </div>
           <a href="">
@@ -74,7 +87,7 @@
         </div>
         <div class="col-2"></div>
       </div>
-      <div class="row mt-5">
+      <div class="row mt-5 rounded">
         <div class="col-1"></div>
         <div class="col-md-4 col-12 search">
           <img src="../../assets/images/Group 6864.png" alt="" />
@@ -84,7 +97,7 @@
             With EASY-CERT you can make sure that the products you purchase have
             the label status you desire.
           </p>
-          <button class="btn btn-secondary">
+          <button class="btn btn-light text-primary">
             Register for customer portel <mat-icon>arrow_right_alt</mat-icon>
           </button>
         </div>
@@ -97,10 +110,8 @@
       </div>
       <div class="row mt-5">
         <div class="col-12">
-          
           <app-footer></app-footer>
         </div>
-       
       </div>
     </div>
   </div>
