--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@ html, body
     overflow: scroll;
 }
 body { margin: 0; font-family: 'Manrope', sans-serif!important;font-size: 62.5%!important; }
+
 .text-xxl {
     font-size: var(--size-xlarge) !important;
     font-family: 'Manrope',sans-serif!important;
@@ -13,18 +14,21 @@ body { margin: 0; font-family: 'Manrope', sans-serif!important;font-size: 62.5%!
     line-height: 51px;
     size: 2rem;
 }
+
+.text-xl {
+	font-size: 1rem !important;
+    font-weight: 400;
+    line-height: 25.6px;
+    color: var(--tundora);
+}
 .text-p {
-  font-weight: 700;
+  font-weight: 600;
   line-height: 25.6px;
   size: 1rem;
   color: var(--tundora);
 }
- .text-xl {
-	size: 1.125rem !important;
-    font-weight: 600;
-    line-height: 28.8px;
-    color: var(--tundora);
-}
+ 
+
 .text-sl{
     size:0.875rem;
     line-height: 21.78px;
