--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,10 +1,11 @@
-<div class="row footer">
+<div class="row footer mt-3">
   <div class="col text-center">
-    <p class="text-xl">Do you have any question about our services?</p>
+    <p class="text-xl mt-3">Do you have any question about our services?</p>
     <p class="text-p">
       Please do get in touch with us. We will be pleased to provide advice and
       further information on any aspect of this service. <br />
-      Email your query to <span><a href="">info@easy-cert.com</a></span>
+      Email your query to
+      <span><a href="" class="text-link">info@easy-cert.com</a></span>
     </p>
   </div>
 </div>
@@ -50,24 +51,36 @@
       </li>
     </ul>
   </div>
-  <div class="col-2 mt-2 text-sl ">
+  <div class="col-2 mt-2 text-sl">
     <ul class="text-info text-sl">
       <li><p class="text-p">Contact</p></li>
       <li>
-        <p >EASY-CERT services AG CH-5070 Frick</p>
+        <p>EASY-CERT services AG CH-5070 Frick</p>
       </li>
       <li>
-        <p>Email: <span><a href="">info@easy-cert.com</a></span> </p>
+        <p>
+          Email:
+          <span><a href="" class="text-link">info@easy-cert.com</a></span>
+        </p>
       </li>
       <li>
-        <p>Phone : <span><a href="">+43 (0) 3182 40 101-21</a></span></p>
+        <p>
+          Phone :
+          <span><a href="" class="text-link">+43 (0) 3182 40 101-21</a></span>
+        </p>
       </li>
       <li><p>AT-2202 Enzersfeld bei Wien</p></li>
       <li>
-        <p>Email: <span><a href="">info@easy-cert.com</a></span> </p>
+        <p>
+          Email:
+          <span><a href="" class="text-link">info@easy-cert.com</a></span>
+        </p>
       </li>
       <li>
-        <p>Phone : <span><a href="">+43 (0) 3182 40 101-21</a></span></p>
+        <p>
+          Phone :
+          <span><a href="" class="text-link">+43 (0) 3182 40 101-21</a></span>
+        </p>
       </li>
     </ul>
   </div>
