--- a/src/app/front-page/front-page.component.html
+++ b/src/app/front-page/front-page.component.html
@@ -3,18 +3,16 @@
     <div class="col-12">
       <app-header></app-header>
       <div class="row">
-       <div class="col-1">
-
-       </div>
-       <div class="col-10 ">
-        <div class="image mx-5">
-          <img src="../../assets/images/Dark one.png" alt="" />
-          <h3 class="txt">
-            Check certifications, label approvals and products online
-          </h3>
+        <div class="col-1"></div>
+        <div class="col-10">
+          <div class="image mx-5">
+            <img src="../../assets/images/Dark one.png" alt="" />
+            <h3 class="txt">
+              Check certifications, label approvals and products online
+            </h3>
+          </div>
         </div>
-       </div>
-       <div class="col-1"></div>
+        <div class="col-1"></div>
       </div>
       <div class="row mt-5">
         <div class="col-2"></div>
@@ -28,21 +26,23 @@
           </p>
           <ul>
             <li class="text-primary">
-              <div class="d-flex flex-direction-column ">
+              <div class="d-flex flex-direction-column">
                 <mat-icon>done</mat-icon>
-              <p class="text-p">
-                Swift and secure acess to infromation on certifications and
-                status
-              </p>
+                <p class="text-p">
+                  Swift and secure acess to infromation on certifications and
+                  status
+                </p>
               </div>
               <div class="d-flex flex-direction-column">
                 <mat-icon>done </mat-icon>
-                <p class="text-p">Gain transperancy and clarity to informations</p>
+                <p class="text-p">
+                  Gain transperancy and clarity to informations
+                </p>
               </div>
-              
+
               <div class="d-flex flex-direction-column">
                 <mat-icon>done </mat-icon>
-              <p class="text-p">Save your much valuable time</p>
+                <p class="text-p">Save your much valuable time</p>
               </div>
             </li>
           </ul>
@@ -57,7 +57,7 @@
         <div class="col-2"></div>
         <div class="col-12 col-md-4">
           <p class="text-p">About us</p>
-          <p class="text-xxl text-info">
+          <p class="text-xxxl text-info">
             With vision and courage, we are breaking new ground.
           </p>
           <p class="text-xl text-info">
@@ -93,7 +93,7 @@
           <img src="../../assets/images/Group 6864.png" alt="" />
         </div>
         <div class="col-md-6 col-12 search">
-          <p class="text-xxl mt-3 text-white">
+          <p class="text-xxxl mt-3 text-white">
             With EASY-CERT you can make sure that the products you purchase have
             the label status you desire.
           </p>
