--- a/src/variables.css
+++ b/src/variables.css
@@ -10,7 +10,7 @@
   --dark: #151515;
   --info:#4A4A4A;
   --warning: #FFDF8C;
-  
+  --link:#2F80ED;
 
   /* Other custom colors for project */
   --border-color: #cacaca;
