--- a/src/app/image-slider/image-slider.component.html
+++ b/src/app/image-slider/image-slider.component.html
@@ -1,84 +1,102 @@
-<div class="container mt-5 ">
+<div class="container mt-5">
   <div class="carousel slide" data-ride="carousel" id="multi_item">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <div class="row">
-          <div class="col-sm"><img class="d-block w-25" src="../../assets/images/slider1.png" alt="1 slide"></div>
-          <div class="col-sm"><img class="d-block w-25" src="../../assets/images/slider2.png" alt="2 slide"></div>
-          <div class="col-sm"><img class="d-block w-25" src="../../assets/images/slider3.png" alt="3 slide"></div>
-          <div class="col-sm"><img class="d-block w-25" src="../../assets/images/slider4.png" alt="4 slide"></div>
-          <div class="col-sm"><img class="d-block w-25" src="../../assets/images/slider5.png" alt="5 slide"></div>
+          <div class="col-sm">
+            <img
+              class="d-block w-25"
+              src="../../assets/images/slider1.png"
+              alt="1 slide"
+            />
+          </div>
+          <div class="col-sm">
+            <img
+              class="d-block w-25"
+              src="../../assets/images/slider2.png"
+              alt="2 slide"
+            />
+          </div>
+          <div class="col-sm">
+            <img
+              class="d-block w-25"
+              src="../../assets/images/slider3.png"
+              alt="3 slide"
+            />
+          </div>
+          <div class="col-sm">
+            <img
+              class="d-block w-25"
+              src="../../assets/images/slider4.png"
+              alt="4 slide"
+            />
+          </div>
+          <div class="col-sm">
+            <img
+              class="d-block w-25"
+              src="../../assets/images/slider5.png"
+              alt="5 slide"
+            />
+          </div>
         </div>
       </div>
       <div class="carousel-item">
         <div class="row">
-          <div class="col-sm"><img class="d-block w-25" src="../../assets/images/slider6.png" alt="6 slide"></div>
-          <div class="col-sm"><img class="d-block w-25" src="../../assets/images/slider7.png"alt="7 slide"></div>
-          <div class="col-sm"><img class="d-block w-25" src="../../assets/images/slider8.png" alt="8 slide"></div>
-          <div class="col-sm"><img class="d-block w-25" src="../../assets/images/slider9.png" alt="3 slide"></div>
-          <div class="col-sm"><img class="d-block w-25" src="../../assets/images/slider10.png" alt="3 slide"></div>
+          <div class="col-sm">
+            <img
+              class="d-block w-25"
+              src="../../assets/images/slider6.png"
+              alt="6 slide"
+            />
+          </div>
+          <div class="col-sm">
+            <img
+              class="d-block w-25"
+              src="../../assets/images/slider7.png"
+              alt="7 slide"
+            />
+          </div>
+          <div class="col-sm">
+            <img
+              class="d-block w-25"
+              src="../../assets/images/slider8.png"
+              alt="8 slide"
+            />
+          </div>
+          <div class="col-sm">
+            <img
+              class="d-block w-25"
+              src="../../assets/images/slider9.png"
+              alt="3 slide"
+            />
+          </div>
+          <div class="col-sm">
+            <img
+              class="d-block w-25"
+              src="../../assets/images/slider10.png"
+              alt="3 slide"
+            />
+          </div>
         </div>
       </div>
     </div>
-    <a class="carousel-control-prev" href="#multi_item" role="button" data-slide="prev">
+    <a
+      class="carousel-control-prev"
+      href="#multi_item"
+      role="button"
+      data-slide="prev"
+    >
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#multi_item" role="button" data-slide="next">
+    <a
+      class="carousel-control-next"
+      href="#multi_item"
+      role="button"
+      data-slide="next"
+    >
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
   </div>
 </div>
-
-
-
-<!-- <ngb-carousel *ngIf="images">
-  <ng-template ngbSlide>
-    <div class="picsum-img-wrapper">
-      <img [src]="images[0]" alt="Random first slide">
-    </div>
-    <div class="carousel-caption">
-      <h3>First slide label</h3>
-      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-    </div>
-  </ng-template>
-  <ng-template ngbSlide>
-    <div class="picsum-img-wrapper">
-      <img [src]="images[1]" alt="Random second slide">
-    </div>
-    <div class="carousel-caption">
-      <h3>Second slide label</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
-  </ng-template>
-  <ng-template ngbSlide>
-    <div class="picsum-img-wrapper">
-      <img [src]="images[2]" alt="Random third slide">
-    </div>
-    <div class="carousel-caption">
-      <h3>Third slide label</h3>
-      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-    </div>
-  </ng-template>
-  <ng-template ngbSlide>
-    <div class="picsum-img-wrapper">
-      <img [src]="images[2]" alt="Random third slide">
-    </div>
-    <div class="carousel-caption">
-      <h3>Third slide label</h3>
-      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-    </div>
-  </ng-template>
-  <ng-template ngbSlide>
-    <div class="picsum-img-wrapper">
-      <img [src]="images[2]" alt="Random third slide">
-    </div>
-    <div class="carousel-caption">
-      <h3>Third slide label</h3>
-      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-    </div>
-  </ng-template>
-</ngb-carousel> -->
-
-
